# GateServer

./: CMakeLists.txt  README.md  dump.rdb  message.proto
includes/: AsioIOServicePool.h  ConfiMgr.h  HttpConnection.h  LogSystem.h  LogicalSystem.h  MySqlDao.h  MySqlMgr.h  MySqlPool.h  RedisConPool.h  RedisMgr.h  RedisPool.h  Server.h  StatusGrpcClient.h  VarfiyGrpcClient.h  const.h  gRPCMrg.h  message.grpc.pb.h  message.pb.h  singleton.h
proto/: message.grpc.pb.cc  message.pb.cc
src/: AsioIOServicePool.cpp  ConfiMgr.cpp  HttpConnection.cpp  LogSystem.cpp  LogicalSystem.cpp  RedisMgr.cpp  RedisPool.cpp  Server.cpp  VarfiyGrpcClient.cpp  gRPCMrg.cpp  main.cpp
